--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.Type = TRACE
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
